Added Super Bowl Sunday

--- a/events.html
+++ b/events.html
@@ -25,6 +25,30 @@
 <div id="events" class="content-block events-block">
   <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
+      <h2 class="heading-secondary">Super Bowl Sunday</h2>
+
+      <p>February 5th, 2017 at 3pm</p> 
+
+      <p><b>$11</b></p>
+      <p>Pasta with house-smoked chicken + caramelized onions + roasted red peppers + bbq alfredo sauce.</p>
+
+      <p><b>$10</b></p>
+      <p>Slow roasted Pork lolly-pops + plum dipping sauce + vegetable crudité ranch dipping sauce.</p>
+
+      <p><b>$8</b></p>
+      <p>Sautéed scampi style Shrimp + house-made focaccia bread spicy chiles.</p>
+
+      <p><b>$2.50</b></p>
+      <p>Drink Features: Domestic Bottles (Bud, Bud Light, Coors Banquet, Coors Light) &amp; shots of Fireball Cinnamon Whisky</p>
+
+      
+    </div>
+  </div>
+</div>
+
+<div id="events" class="content-block events-block">
+  <div class="events-block-inner container">
+    <div class="feature-box text-center col-12-m col-8-l no-float center">
       <h2 class="heading-secondary">Valentine's Day</h2>
 
       <p>Saturday February 11th through Tuesday February 14th<br />
@@ -52,7 +76,6 @@
       <p><b>$8</b></p>
       <h4>Cherry Chocolate Short dough Tart</h4>
       <p>Raspberry sauce &amp; vanilla chantilly cream</p>
-      <br />
       <h4>or</h4>
       <h4>Long-stem Strawberries</h4>
       <p>vanilla-bean pastry cream + hot chocolate sauce</p>
