Easter coming soon

--- a/events.html
+++ b/events.html
@@ -25,9 +25,9 @@
 <div id="events" class="content-block events-block">
   <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">Super Bowl Sunday</h2>
+      <h2 class="heading-secondary">Easter Coming Soon</h2>
 
-      <p>February 5th, 2017 at 3pm</p> 
+      <!--<p>February 5th, 2017 at 3pm</p> 
 
       <p><b>$11</b></p>
       <p>Pasta with house-smoked chicken + caramelized onions + roasted red peppers + bbq alfredo sauce.</p>
@@ -39,50 +39,7 @@
       <p>Sautéed scampi style Shrimp + house-made focaccia bread spicy chiles.</p>
 
       <p><b>$2.50</b></p>
-      <p>Drink Features: Domestic Bottles (Bud, Bud Light, Coors Banquet, Coors Light) &amp; shots of Fireball Cinnamon Whisky</p>
-
-      
-    </div>
-  </div>
-</div>
-
-<div id="events" class="content-block events-block">
-  <div class="events-block-inner container">
-    <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">Valentine's Day</h2>
-
-      <p>Saturday February 11th through Tuesday February 14th<br />
-      5pm-9pm
-      Limited Availability <br />
-      Reservations Recommended <br />
-      Regular dinner menu also available</p> 
-
-      <h3><u>1st</u></h3>
-      <p><b>$12</b></p>
-      <h4>Griddled Rock Shrimp</h4>
-      <p>Kombu brined shrimp - Early grey citrus curd + smoked butternut pearls</p>
-
-      <h3><u>2nd</u></h3>
-      <p><b>$10</b></p>
-      <h4>Mozzarella”burrata” &amp; baby Cabo Tomato Salad</h4>
-      <p>micro greens + basil nage + aged balsamic + virgin olive oil + Jacobsen Sea Salt</p>
-
-      <h3><u>Entree</u></h3>
-      <p><b>$38</b></p>
-      <h4>Reserve New York Steak - certified Prime</h4>
-      <p>Truffle Yukon potato croquette + asparagus + cask demi</p>
-
-      <h3><u>Dessert</u></h3>
-      <p><b>$8</b></p>
-      <h4>Cherry Chocolate Short dough Tart</h4>
-      <p>Raspberry sauce &amp; vanilla chantilly cream</p>
-      <h4>or</h4>
-      <h4>Long-stem Strawberries</h4>
-      <p>vanilla-bean pastry cream + hot chocolate sauce</p>
-
-      <h3><u>Champagne Toast for Two</u></h3>
-      <p><b>$16</b></p>
-      <h4>Ruffino Prosecco NV IT</h4>
+      <p>Drink Features: Domestic Bottles (Bud, Bud Light, Coors Banquet, Coors Light) &amp; shots of Fireball Cinnamon Whisky</p>-->
 
       
     </div>
