Happy hour cloud stitch updates

--- a/happy-hour.html
+++ b/happy-hour.html
@@ -51,11 +51,11 @@
     </div>
   </div>
 </div>
-<!--
-<cloudstitch-handlebars user="sprigsgrille" app="new-sprigs-grille-menu"></cloudstitch-handlebars>
--->
- 
 
+<cloudstitch-handlebars user="sprigsgrille" app="sprigs-happy-hour-1"></cloudstitch-handlebars>
+
+ 
+<!--
 <div id="menu" class="content-block food-menu-block">
   <div class="food-menu-block-inner container">
     <div class="clear">
@@ -206,7 +206,7 @@
       </div>
     </div>
   </div>
-</div> 
+</div>-->
 
 
 <div id="reservations" class="content-block reviews-block">
@@ -217,27 +217,6 @@
     </div>
   </div>
 </div>
-
-
-
-<div id="gallery" class="content-block reservations-block">
-  <div class="reservations-block-inner container">
-    <div class="clear">
-      <h2 class="heading">Gallery</h2>
-      <div class="reservation-block-img col-4-l none block-l">
-        <img class="img-fluid " src="img/chicken.jpg" alt="Food">
-      </div>
-      <div class="reservation-block-img col-6-m col-4-l none block-m">
-        <img class="img-fluid " src="img/food.jpg" alt="Food">
-      </div>
-      <div class="reservation-block-img col-6-m col-4-l none block-m">
-        <img class="img-fluid " src="img/fish-2.jpg" alt="Food">
-      </div>
-    </div>
-  </div>
-</div>
-
-
 
 <div class="footer">
   <div class="footer-inner container">
