Update navigation for happy hour

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <li class="navigation-item"><a href="#menu">Menu</a></li>
           <li class="navigation-item"><a href="#reservations">Reservations</a></li>
           <li class="navigation-item"><a href="#gallery">Gallery</a></li>
+          <li class="navigation-item"><a href="http://sprigsgrille.com/happy-hour.html" target="blank">Happy Hour</a></li>
           <li class="navigation-item"><a href="https://poseidonimaging.github.io/sprigsgrille/events.html" target="blank">Events</a></li>
         </ul>
         <ul class="navigation-social">
