--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="banner">
   <div class="header">
     <div class="header-inner container clear">
-      <img src="https://poseidonimaging.github.io/sprigsgrille/img/sprigs-grille-logo.png" alt="Sprigs Grille">
+      <a href="http://sprigsgrille.com"><img src="https://poseidonimaging.github.io/sprigsgrille/img/sprigs-grille-logo.png" alt="Sprigs Grille"></a>
       <input type="checkbox" id="navigation-toggle-checkbox" name="navigation-toggle-checkbox" class="navigation-toggle-checkbox sr">
       <label for="navigation-toggle-checkbox" class="navigation-toggle-label" onclick>
         <span class="navigation-toggle-label-inner">
@@ -43,7 +43,7 @@
           <li class="navigation-item"><a href="#reservations">Reservations</a></li>
           <li class="navigation-item"><a href="#gallery">Gallery</a></li>
           <li class="navigation-item"><a href="http://sprigsgrille.com/happy-hour.html" target="blank">Happy Hour</a></li>
-          <li class="navigation-item"><a href="https://poseidonimaging.github.io/sprigsgrille/events.html" target="blank">Events</a></li>
+          <li class="navigation-item"><a href="http://sprigsgrille.com/events.html" target="blank">Events</a></li>
         </ul>
         <ul class="navigation-social">
           <li class="navigation-item-social"><a class="social social-facebook" href="https://www.facebook.com/sprigsgrille/"><span class="sr">Facebook</span></a></li>
