Update events page

--- a/events.html
+++ b/events.html
@@ -25,11 +25,11 @@
 <div id="events" class="content-block events-block">
   <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">Easter Coming Soon</h2>
+      <h2 class="heading-secondary">Thanksgiving coming soon!</h2>
 
-      <!--<p>February 5th, 2017 at 3pm</p> 
+      <p>Special holiday hours 3:30-9pm, <link href="http://www.opentable.com/dcwidget/2015/dinerschoicebadges.css" rel="stylesheet" type="text/css" /><a href="http://www.opentable.com/rest_profile.aspx?rid=193552&restref=193552" class="ot-dc-badge ot-dc-badge--p">book your reservations now!</a></p> 
 
-      <p><b>$11</b></p>
+      <!--<p><b>$11</b></p>
       <p>Pasta with house-smoked chicken + caramelized onions + roasted red peppers + bbq alfredo sauce.</p>
 
       <p><b>$10</b></p>
