--- a/events.html
+++ b/events.html
@@ -25,21 +25,33 @@
 <div id="events" class="content-block events-block">
   <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">Thanksgiving coming soon!</h2>
+      <h2 class="heading-secondary">Thanksgiving Celebration</h2>
 
-      <p>Special holiday hours 3:30-9pm, <link href="http://www.opentable.com/dcwidget/2015/dinerschoicebadges.css" rel="stylesheet" type="text/css" /><a href="http://www.opentable.com/rest_profile.aspx?rid=193552&restref=193552" class="ot-dc-badge ot-dc-badge--p">book your reservations now!</a></p> 
+      <p>November 23th, 2017 | 3:30pm-10pm <br />
+      Limited Availability <br />
+      Reservations Recommended</p> 
+      
+      <h3><u>Starters</u></h3>
+      <p><b>$6.00</b></p>
+      <h4>Butternut Squash Soup</h4>
+      <p>vegan: pumpkin pie crema + smoked hazelnuts + sea salt maple croutons</p>
 
-      <!--<p><b>$11</b></p>
-      <p>Pasta with house-smoked chicken + caramelized onions + roasted red peppers + bbq alfredo sauce.</p>
+      <h3><u>Entrées</u></h3>
+      <h4>Apple-brined Roasted Tom Turkey</h4>
+      <p>mashed potato + apple-walnut sage stuffing + caramelized root vegetables + cranberry sauce + gravy<br>
+      regular size $18.00 or petite size $14.00 suggested wine pairing Erath Pinot Blanc - OR</p>
 
-      <p><b>$10</b></p>
-      <p>Slow roasted Pork lolly-pops + plum dipping sauce + vegetable crudité ranch dipping sauce.</p>
+      <h4>Slow Roasted Angus Prime Rib of Beef</h4>
+      <p>rosemary sea salt crust english Yorkshire pudding + mashed Yukon potato + root vegetables + au jus + horseradish<br>
+      12 oz. cut $28.00 or 8 oz. cut $20.00 suggested wine pairing Clos du Bois Cabernet - CA</p>
 
-      <p><b>$8</b></p>
-      <p>Sautéed scampi style Shrimp + house-made focaccia bread spicy chiles.</p>
+      <h3><u>Dessert</u></h3>
+      <p><b>$6.00</b></p>
+      <h4>Pumpkin Spiced Cheesecake</h4>
+      <p>caramel sauce + vanilla whip</p>
 
-      <p><b>$2.50</b></p>
-      <p>Drink Features: Domestic Bottles (Bud, Bud Light, Coors Banquet, Coors Light) &amp; shots of Fireball Cinnamon Whisky</p>-->
+      <h4>Maple Pecan Tart</h4>
+      <p>caramel sauce + vanilla whip</p>
 
       
     </div>
