--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@
     <div class="feature-box text-center col-12-m col-8-l no-float center">
       <h2 class="heading-secondary">Thanksgiving Celebration</h2>
 
-      <p>November 23th, 2017 | 3:30pm-10pm <br />
+      <p>November 23rd, 2017 | 3:30pm-10pm <br />
       Limited Availability <br />
       Reservations Recommended</p> 
       
