--- a/events.html
+++ b/events.html
@@ -25,34 +25,36 @@
 <div id="events" class="content-block events-block">
   <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">Thanksgiving Celebration</h2>
+      <h2 class="heading-secondary">Christmas Features</h2>
 
-      <p>November 23rd, 2017 | 3:30pm-10pm <br />
+      <p>December 24th and 25th | 5pm-10pm <br />
       Limited Availability <br />
       Reservations Recommended</p> 
       
       <h3><u>Starters</u></h3>
-      <p><b>$6.00</b></p>
-      <h4>Butternut Squash Soup</h4>
-      <p>vegan: pumpkin pie crema + smoked hazelnuts + sea salt maple croutons</p>
+      <p><b>$12.00</b></p>
+      <h4>Fresh Jumbo Sea Scallop</h4>
+      <p>bacon + risotto + old bay veloute</p>
 
       <h3><u>Entrées</u></h3>
       <h4>Apple-brined Roasted Tom Turkey</h4>
       <p>mashed potato + apple-walnut sage stuffing + caramelized root vegetables + cranberry sauce + gravy<br>
-      regular size $18.00 or petite size $14.00 suggested wine pairing Erath Pinot Blanc - OR</p>
+      $18 / suggested wine pairing Erath Pinot Blanc - OR<br>
+      <i>(Kids Turkey Dinner $11.00)</i></p>
 
-      <h4>Slow Roasted Angus Prime Rib of Beef</h4>
-      <p>rosemary sea salt crust english Yorkshire pudding + mashed Yukon potato + root vegetables + au jus + horseradish<br>
-      12 oz. cut $28.00 or 8 oz. cut $20.00 suggested wine pairing Clos du Bois Cabernet - CA</p>
+      <h4>Angus Prime Rib of Beef</h4>
+      <p>english Yorkshire pudding + mashed Yukon potato root vegetables + au jus + horseradish<br>
+      $25 / suggested wine pairing Chateau Ste. Michelle Indian Wells Cabernet- CA</p>
 
       <h3><u>Dessert</u></h3>
-      <p><b>$6.00</b></p>
-      <h4>Pumpkin Spiced Cheesecake</h4>
-      <p>caramel sauce + vanilla whip</p>
+      <p><b>$7</b></p>
+      <h4>Eggnog Cheesecake</h4>
+      <p>New York style with eggnog + spiced rum
+      With vanilla whipped &amp; caramel sauce</p>
 
-      <h4>Maple Pecan Tart</h4>
-      <p>caramel sauce + vanilla whip</p>
-
+      <h4>Maple Spice Cake</h4>
+      <p>Layers of spice cake soaked with rum &amp; brandy
+      Filled with maple spice buttercream</p>
       
     </div>
   </div>
