--- a/events.html
+++ b/events.html
@@ -38,22 +38,24 @@
 
       <h3><u>Entrées</u></h3>
       <h4>Apple-brined Roasted Tom Turkey</h4>
-      <p>mashed potato + apple-walnut sage stuffing + caramelized root vegetables + cranberry sauce + gravy<br>
+      <p>mashed potato + apple-walnut sage stuffing + caramelized<br>
+      root vegetables + cranberry sauce + gravy<br>
       $18 / suggested wine pairing Erath Pinot Blanc - OR<br>
       <i>(Kids Turkey Dinner $11.00)</i></p>
 
       <h4>Angus Prime Rib of Beef</h4>
-      <p>english Yorkshire pudding + mashed Yukon potato root vegetables + au jus + horseradish<br>
+      <p>english Yorkshire pudding + mashed Yukon potato<br>
+      root vegetables + au jus + horseradish<br>
       $25 / suggested wine pairing Chateau Ste. Michelle Indian Wells Cabernet- CA</p>
 
       <h3><u>Dessert</u></h3>
       <p><b>$7</b></p>
       <h4>Eggnog Cheesecake</h4>
-      <p>New York style with eggnog + spiced rum
+      <p>New York style with eggnog + spiced rum<br>
       With vanilla whipped &amp; caramel sauce</p>
 
       <h4>Maple Spice Cake</h4>
-      <p>Layers of spice cake soaked with rum &amp; brandy
+      <p>Layers of spice cake soaked with rum &amp; brandy<br>
       Filled with maple spice buttercream</p>
       
     </div>
