--- a/events.html
+++ b/events.html
@@ -25,38 +25,30 @@
 <div id="events" class="content-block events-block">
   <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">Christmas Features</h2>
+      <h2 class="heading-secondary">New Year’s 2017 / 2018 Celebration Menu</h2>
 
-      <p>December 24th and 25th | 5pm-10pm <br />
+      <p>December 31st | 5pm-10pm <br />
+      Regular Sprigs ala carte menu also available<br />
       Limited Availability <br />
       Reservations Recommended</p> 
       
       <h3><u>Starters</u></h3>
-      <p><b>$12.00</b></p>
-      <h4>Fresh Jumbo Sea Scallop</h4>
-      <p>bacon + risotto + old bay veloute</p>
+      <p><b>$13.00</b></p>
+      <h4>Jumbo Wild Gulf Sea Scallop</h4>
+      <p>bouquetiere vegetable watercress salad + pink peppercorn grapefruit beurre blanc<br />
+      Oregon olive mill “blood orange evo” + Jacobsen lemon sea salt</p>
 
-      <h3><u>Entrées</u></h3>
-      <h4>Apple-brined Roasted Tom Turkey</h4>
-      <p>mashed potato + apple-walnut sage stuffing + caramelized<br>
-      root vegetables + cranberry sauce + gravy<br>
-      $18 / suggested wine pairing Erath Pinot Blanc - OR<br>
-      <i>(Kids Turkey Dinner $11.00)</i></p>
-
-      <h4>Angus Prime Rib of Beef</h4>
-      <p>english Yorkshire pudding + mashed Yukon potato<br>
-      root vegetables + au jus + horseradish<br>
-      $25 / suggested wine pairing Chateau Ste. Michelle Indian Wells Cabernet- CA</p>
+      <h3><u>Entrée</u></h3>
+      <p><b>$31.00</b></p>
+      <h4>Filet of New York &amp; Wild Shrimp</h4>
+      <p>filet of certified Angus beef Striploin + wild scampi shrimp<br>
+      white truffle Yukon potatoes + market vegetables + sherry wine demi-glace</p>
 
       <h3><u>Dessert</u></h3>
       <p><b>$7</b></p>
-      <h4>Eggnog Cheesecake</h4>
-      <p>New York style with eggnog + spiced rum<br>
-      With vanilla whipped &amp; caramel sauce</p>
-
-      <h4>Maple Spice Cake</h4>
-      <p>Layers of spice cake soaked with rum &amp; brandy<br>
-      Filled with maple spice buttercream</p>
+      <h4>Chocolate &amp; Raspberry Mousse “roulade”</h4>
+      <p>kirshwasser syrup soaked sponge cake filled with raspberry &amp; chocolate mousse<br>
+      served with fresh berries</p>
       
     </div>
   </div>
