Valentine's Day Update

--- a/events.html
+++ b/events.html
@@ -25,30 +25,45 @@
 <div id="events" class="content-block events-block">
   <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">New Year’s 2017 / 2018 Celebration Menu</h2>
+      <h2 class="heading-secondary">Valentine's Day 2018 Celebration Menu</h2>
 
-      <p>December 31st | 5pm-10pm <br />
+      <p>February 14th, 5pm-10pm<br />
       Regular Sprigs ala carte menu also available<br />
       Limited Availability <br />
       Reservations Recommended</p> 
       
-      <h3><u>Starters</u></h3>
-      <p><b>$13</b></p>
-      <h4>Jumbo Wild Gulf Sea Scallop</h4>
-      <p>bouquetiere vegetable watercress salad + pink peppercorn grapefruit beurre blanc<br />
-      Oregon olive mill “blood orange evo” + Jacobsen lemon sea salt</p>
+      <h3><u>Appetizer</u></h3>
+      <p><b>$14</b></p>
+      <h4>Caramelized Jumbo Sea Scallops</h4>
+      <p>coconut-beet nage + coriander<br />
+      beluga lentils + chorizo chips</p>
 
-      <h3><u>Entrée</u></h3>
-      <p><b>$31</b></p>
-      <h4>Filet of New York &amp; Wild Shrimp</h4>
-      <p>filet of certified Angus beef Striploin + wild scampi shrimp<br>
-      white truffle Yukon potatoes + market vegetables + sherry wine demi-glace</p>
+      <h3><u>Garden</u></h3>
+      <p><b>$12</b></p>
+      <h4>Burrata Tomato Salad</h4>
+      <p>creamy mozzarella + cabo<br />
+      tomatoes + evo + balsamic<br />
+      basil + Jacobsen sea salt</p>
+
+      <h3><u>Entree</u></h3>
+      <p><b>$29</b></p>
+      <h4>Surf n Turf</h4>
+      <p>north atlantic cold water lobster tail<br />
+      bacon wrapped beef tenderloin<br />
+      truffle whipped potatoes<br />
+      grilled asparagus<br />
+      sauces – cask demi &amp; newburg</p>
 
       <h3><u>Dessert</u></h3>
-      <p><b>$7</b></p>
-      <h4>Chocolate &amp; Raspberry Mousse “roulade”</h4>
-      <p>kirshwasser syrup soaked sponge cake filled with raspberry &amp; chocolate mousse<br>
-      served with fresh berries</p>
+      <p><b>$8</b></p>
+      <h4>Cherry Chocolate Torte</h4>
+      <p>decadent bittersweet chocolate<br />
+      torte + warm cherry compote<br />
+      vanilla chantilly cream</p>
+
+      <h3><u>Champagne Toast for Two</u></h3>
+      <p><b>$16</b></p>
+      <h4>Ruffino Prosecco NV IT</h4>
       
     </div>
   </div>
